--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -2,12 +2,13 @@
   "pages":[
     "pages/index/index",
     "pages/detail/detail",
-    "pages/details/details",
+    "pages/store/store",
     "pages/book/book",
     "pages/technician/technician",
     "pages/technicain_detail/technicain_detail",
     "pages/edit_addr/edit_addr",
-    "pages/user/user"
+    "pages/user/user",
+    "pages/skill_detail/skill_detail"
   ],
   "window":{
     "backgroundTextStyle":"light",
